--- a/src/index.css
+++ b/src/index.css
@@ -18,18 +18,21 @@
 }
 
 .category {
+  display: inline-block;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  width: fit-content;
+  /* width: fit-content; */
   padding: 8px 10px;
   border-radius: 50px;
   cursor: pointer;
   transition: 0.2s;
   color: var(--black);
-}
 
-.category:hover {
-  background-color: var(--yellow2);
-  color: var(--white);
+  @media (min-width: 768px) {
+    &:hover {
+      background-color: var(--yellow2);
+      color: var(--white);
+    }
+  }
 }
 
 .category--selected {
